--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,8 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+        android:theme="@style/AppTheme.AppBarOverlay"
+        android:id="@+id/header">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -23,25 +24,26 @@
 
     <TextView
         android:id="@+id/titleText"
-        android:textSize="34dp"
+        android:layout_below="@+id/header"
+        android:textSize="45sp"
         android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:padding="20dp"
         android:text="Mood Scanner"
-        android:textColor="#fabfab"
+        android:textColor="#333"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/textExplain"
-        android:textSize="15dp"
-        android:textColor="#000"
+        android:textSize="30sp"
+        android:textColor="#333"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/titleText"
         android:text="@string/text_explain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="20dp"/>
 
     <ImageView
@@ -50,22 +52,22 @@
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/textExplain"
         android:layout_marginTop="4dp"
-        android:layout_width="200dp"
-        android:layout_height="304dp" />
+        android:layout_width="400dp"
+        android:layout_height="504dp" />
 
     <ImageView
         android:id="@+id/thumbPrint"
         android:src="@drawable/thumb_finger_prints"
         android:layout_below="@+id/textExplain"
         android:layout_centerHorizontal="true"
-        android:layout_width="200dp"
-        android:layout_height="304dp" />
+        android:layout_width="400dp"
+        android:layout_height="504dp" />
 
     <TextView
         android:id="@+id/resultTitle"
-        android:textSize="18dp"
+        android:textSize="30sp"
         android:textStyle="normal"
-        android:textColor="#000"
+        android:textColor="#333"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/thumbPrint"
@@ -76,11 +78,11 @@
 
     <TextView
         android:id="@+id/resultText"
-        android:textSize="20dp"
+        android:textSize="35sp"
         android:textStyle="normal"
         android:textColor="#bbff1521"
         android:layout_centerHorizontal="true"
-        android:text="Hello"
+        android:text="- - - - - - - - -"
         android:layout_below="@+id/resultTitle"
         android:layout_marginTop="6dp"
         android:layout_width="wrap_content"
